@@ -1,4 +1,7 @@
-2012-05-16  Kirit Saelensminde  <kirit@felspar.com>
+2012-05-18  Kirit Saelensminde  <kirit@felspar.com>
+ Fixed a problem with deep copies of remote objects that was causing Django to throw errors when they were used in certain types of query.
+
+2012-05-17  Kirit Saelensminde  <kirit@felspar.com>
  The create operation now resets the sequence numbers in case a primary key on an auto-increment field is specified.
  The user agent get function can now also be given status codes that it will accept as expected.
  The TTL on proxies is now set to two seconds. There are circumstances under which this might be unsafe. The user agent remains with a zero second TTL.
